--- a/catalog.html
+++ b/catalog.html
@@ -76,10 +76,7 @@
           <div class="header-logo">
             <div class="header-logo-img">
               <a href="./">
-                <picture>
-                  <source type="image/webp" srcset="./assets/images/logo.webp">
-                  <img src="./assets/images/logo.png" alt="Oltintosh paypoq mayka belyo" width="66" height="50">
-                </picture>
+                <img class="header-l-img" src="./assets/images/logo.png" alt="Oltintosh paypoq mayka belyo" width="66" height="50">
               </a>
             </div>
           </div>
@@ -317,9 +314,9 @@
                         <div class="product-top">
                           <div class="product-img">
                             <picture>
-                              <source media="(max-width: 799px)" type="image/webp" srcset="assets/images/product-2x.webp">
-                              <source media="(min-width: 800px)" type="image/webp" srcset="assets/images/product-3x.webp">
-                              <img src="./assets/images/product-3x.png" width="124" height="103" loading="lazy" alt="paypoq mayka savdo tashkent narxi">
+                              <source media="(max-width: 799px)" type="image/webp" srcset="assets/images/product-test.webp">
+                              <source media="(min-width: 800px)" type="image/webp" srcset="assets/images/product-test.webp">
+                              <img src="./assets/images/product-test.png" width="124" height="103" loading="lazy" alt="paypoq mayka savdo tashkent narxi">
                             </picture>
                           </div>
                         </div>
@@ -1115,6 +1112,7 @@
   <!-- <script src="./assets/js/burger.js"></script> -->
   <!-- <script src="./assets/js/to-top.js"></script> -->
   <script src="./assets/js/main.js"></script>
+  <script src="./assets/js/scroll.js"></script>
 
   <!-- custom -->
 
