--- a/index.en.html
+++ b/index.en.html
@@ -163,8 +163,7 @@
                 </div>
                 <div class="intro-subtitle">
                   <h3>
-                    butun oila uchun turli xil paypoq 
-                    buyumlarini taklif etadi:
+                    Offers different socks for the whole family members:
                   </h3>
                 </div>
                 <ul class="intro-list">
